# ptmux

./: .gitignore  README.md  demo.py  instruct.txt  pyproject.toml  wip.py
ptmux/: __init__.py  cli.py  session.py
ptmux.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_session.py
