[project]
name = "ptmux"
version = "0.1.0"
description = "Tiny, Pythonic wrapper around tmux to keep named sessions alive and easy to use from scripts and the command line."
authors = [
    { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
ptmux = "ptmux.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
